Snapshot: 4.3 tree on top of 4.2 for SME diff review